# thriftoy

./: .gitignore  .pre-commit-config.yaml  README.md  Taskfile.yaml  pyproject.toml
thriftoy/: DBUtils.py  DumpService.py  DumpUtils.py  LocustUser.py  ObjectPool.py  RpcUtils.py  TMemoryComplexTransport.py  TMessageDumpProcessor.py  TMessageProcessor.py  TUnPackedProcessor.py  ThriftMessage.py  ThriftSocket.py  ThriftStruct.py  __init__.py
thriftoy/benchmark/: LocustUser.py  locust_user.py  locustfile.py
thriftoy/benchmark_tools/: LocustUser.py
thriftoy/client/: TSimpleClient.py  TUnServicedClient.py  __init__.py  simple_client.py  unserviced_client.py
thriftoy/common/: TMessage.py  TSimpleSocket.py  TTypes.py  memory_wrapped_transport.py  message.py  message_extracted_processor.py  socket.py  types.py
thriftoy/contrib/: TMemoryWrappedTransport.py  TMessageProcessor.py  ThriftClient.py  ThriftSocket.py  types.py
thriftoy/dump/: TDumpService.py  TExtractMessageProcessor.py  dump_service.py  memory_wrapped_transport.py  message_extracted_processor.py
thriftoy/dump_tools/: TDumpService.py  TExtractMessageProcessor.py  TMemoryWrappedTransport.py  __init__.py
thriftoy/tools/: proxy_buffered_to_framed.py  thrift_dump.py
thriftoy/utils/: ObjectPool.py  message_transformer.py
