[tool.poetry]
name = "thriftoy"
version = "0.1.0"
description = "Some tools for thrift"
license = "MIT"
authors = ["curoky <cccuroky@gmail.com>"]
repository = "https://github.com/curoky/thriftoy"
homepage = "https://github.com/curoky/thriftoy"
readme = ["README.md", "LICENSE"]
keywords = ["thrift"]

[tool.poetry.dependencies]
python = ">=3.11"
thriftpy2 = ">=0.4.17"
sqlmodel = ">=0.0.11"
locust = ">=2.18.1"
bbpb = ">=1.0.1"
typer = ">=0.9.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-cov = "^3.0"

[tool.poetry.scripts]
thrift-dump = "thrift-dump:main"

[tool.ruff]
select = ["E", "F", "B", "Q", "I", "UP"]
line-length = 100
target-version = "py311"

[tool.ruff.per-file-ignores]

[tool.yapf]
based_on_style = "google"
column_limit = 100

[tool.black]
line-length = 100
target-version = ['py311']
