[project]
name = "thriftoy"
authors = [{ name = "curoky", email = "cccuroky@gmail.com" }]
dynamic = ["version", "description"]
requires-python = ">=3.11"
readme = "README.md"
license = { text = "Apache License 2.0" }
keywords = ["thrift"]
dependencies = [
  "thriftpy2 >=0.4.17",
  "sqlmodel >=0.0.11",
  "locust >=2.18.1",
  "bbpb >=1.0.1",
  "typer >=0.9.0",
]

[project.urls]
homepage = "https://github.com/curoky/thriftoy"
Repository = "https://github.com/curoky/thriftoy"
Issues = "https://github.com/curoky/thriftoy/issues"
# Documentation = "https://readthedocs.org"
# Changelog = "https://github.com/curoky/thriftoy/blob/master/CHANGELOG.md"

[project.scripts]
thrift-dump = "thriftoy.tools.thrift_dump:app"

[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "B", "Q", "I", "UP"]
